plugins {
    id 'org.springframework.boot' version '2.4.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'wolox'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'junit:junit:4.12'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
    developmentOnly("org.springframework.boot:spring-boot-devtools")
    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
    implementation('org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE')
    implementation group: 'com.google.guava', name: 'guava', version: '27.0-jre'
    testImplementation('com.h2database:h2')
    implementation "org.springframework.boot:spring-boot-starter-security"
    testImplementation "com.github.tomakehurst:wiremock-jre8:2.27.2"

}

test {
    useJUnitPlatform()

}
